force-app/main/default/objects/DER_Application__c/DER_Application__c.object-meta.xml
<CustomObject>
    <label>DER Application</label>
    <nameField>
        <displayFormat>DER-{00000000}</displayFormat>
        <label>DER Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DER Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>