force-app/main/default/objects/DER_Application__c/fields/Approved_Export_Rating__c.field-meta.xml
<CustomField>
    <fullName>Approved_Export_Rating__c</fullName>
    <label>Approved Export Rating</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>