force-app/main/default/objects/DER_Application__c/fields/Approved_Total_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Approved_Total_Capacity__c</fullName>
    <label>Approved Total Capacity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>