force-app/main/default/objects/DER_Application__c/fields/Case_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Application_Number__c</fullName>
    <label>Case Application Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>