force-app/main/default/objects/DER_Application__c/fields/Case_fx__c.field-meta.xml
<CustomField>
    <fullName>Case_fx__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+Case_Id__c , Case_Number__c+&apos; &apos;,&apos;_self&apos;)</formula>
    <label>Case</label>
    <type>Text</type>
</CustomField>