force-app/main/default/objects/DER_Application__c/fields/Central_Protection_Control__c.field-meta.xml
<CustomField>
    <fullName>Central_Protection_Control__c</fullName>
    <description>For DER installations where NSPs specify the need for additional forms of protection above those inbuilt in an inverter.</description>
    <label>Central Protection and Control</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>