force-app/main/default/objects/DER_Application__c/fields/Commissioning_Test__c.field-meta.xml
<CustomField>
    <fullName>Commissioning_Test__c</fullName>
    <label>Commissioning Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic PQ</fullName>
            </value>
            <value>
                <fullName>Full 2 Day PQ</fullName>
            </value>
            <value>
                <fullName>Full 7 Day PQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>