force-app/main/default/objects/DER_Application__c/fields/DER_Scenario__c.field-meta.xml
<CustomField>
    <fullName>DER_Scenario__c</fullName>
    <label>DER Scenario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>