force-app/main/default/objects/DER_Application__c/fields/Existing_Site_Exp_Limit__c.field-meta.xml
<CustomField>
    <fullName>Existing_Site_Exp_Limit__c</fullName>
    <label>Existing Site Export Limit (kVA)</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>