force-app/main/default/objects/DER_Application__c/fields/Existing_Total_Export_Rating__c.field-meta.xml
<CustomField>
    <fullName>Existing_Total_Export_Rating__c</fullName>
    <label>Existing Total Export Rating</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>