force-app/main/default/objects/DER_Application__c/fields/Expected_Annual_Export__c.field-meta.xml
<CustomField>
    <fullName>Expected_Annual_Export__c</fullName>
    <label>Expected Annual Export (kWh)</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>