force-app/main/default/objects/DER_Application__c/fields/Export_Limitation_kVA__c.field-meta.xml
<CustomField>
    <fullName>Export_Limitation_kVA__c</fullName>
    <description>Maximum amount of power (kVA) that may be exported from a connection point to the grid, as monitored by a control / relay function. A null value indicates no limit.
Permitted range is between 0 and 30,000</description>
    <label>Export Limitation (kVA)</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>