force-app/main/default/objects/DER_Application__c/fields/Export_Status_fx__c.field-meta.xml
<CustomField>
    <fullName>Export_Status_fx__c</fullName>
    <description>Groups Export_Sub_Status_fx__c into main statuses</description>
    <formula>IF(

OR( 

AND(Total_System_Capacity__c &gt; 0, Total_System_Capacity__c = Total_System_Export__c), 

AND(
Total_System_Export__c &lt; Total_System_Capacity__c,
OR(
AND(Phase_Amount_Installed__c = 1, Total_System_Export__c = 5),
AND(Phase_Amount_Installed__c = 2, Total_System_Export__c = 10),
AND(Phase_Amount_Installed__c = 3, Total_System_Export__c = 15)
)
)

), 

&quot;Not Export Limited&quot;, 

IF(

OR(

AND(
Total_System_Export__c &lt; Total_System_Capacity__c,
Total_System_Export__c &gt; 0,
OR(
AND(Phase_Amount_Installed__c = 1, Total_System_Export__c &lt;&gt; 5),
AND(Phase_Amount_Installed__c = 2, Total_System_Export__c &lt;&gt; 10),
AND(Phase_Amount_Installed__c = 3, Total_System_Export__c &lt;&gt; 15)
)
), 

AND(Total_System_Capacity__c &gt;0, Total_System_Export__c = 0)

), 

&quot;Export Limited&quot;, 

&quot;Not Applicable&quot;) 

)</formula>
    <label>Export Status</label>
    <type>Text</type>
</CustomField>