force-app/main/default/objects/DER_Application__c/fields/FE_Reg_Status__c.field-meta.xml
<CustomField>
    <fullName>FE_Reg_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flexible Exports Registration</label>
    <type>Checkbox</type>
</CustomField>