force-app/main/default/objects/DER_Application__c/fields/FLC_Single_Phase_to_Ground__c.field-meta.xml
<CustomField>
    <fullName>FLC_Single_Phase_to_Ground__c</fullName>
    <label>Fault Level Single Ph to Ground (A)</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>