force-app/main/default/objects/DER_Application__c/fields/FLC_Three_Phase__c.field-meta.xml
<CustomField>
    <fullName>FLC_Three_Phase__c</fullName>
    <label>Fault Level Three Ph (A)</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>