force-app/main/default/objects/DER_Application__c/fields/Generation_Types__c.field-meta.xml
<CustomField>
    <fullName>Generation_Types__c</fullName>
    <description>Selects which generation type(s) are involved in the connection</description>
    <label>Generation Type(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Fossil</fullName>
            </value>
            <value>
                <fullName>Hydro</fullName>
            </value>
            <value>
                <fullName>Wind</fullName>
            </value>
            <value>
                <fullName>Biomass/waste</fullName>
            </value>
            <value>
                <fullName>Geothermal</fullName>
            </value>
            <value>
                <fullName>Co- / Tri-generation</fullName>
            </value>
            <value>
                <fullName>Bio Gas</fullName>
            </value>
            <value>
                <fullName>Coal</fullName>
            </value>
            <value>
                <fullName>Electric Car</fullName>
            </value>
            <value>
                <fullName>Engine</fullName>
            </value>
            <value>
                <fullName>Fuel Cell</fullName>
            </value>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Steam</fullName>
            </value>
            <value>
                <fullName>Tidal</fullName>
            </value>
            <value>
                <fullName>Wave</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>