force-app/main/default/objects/DER_Application__c/fields/Has_Battery__c.field-meta.xml
<CustomField>
    <fullName>Has_Battery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Battery</label>
    <type>Checkbox</type>
</CustomField>