force-app/main/default/objects/DER_Application__c/fields/Import_Existing_Assets__c.field-meta.xml
<CustomField>
    <fullName>Import_Existing_Assets__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Import Existing Assets</label>
    <type>Checkbox</type>
</CustomField>