force-app/main/default/objects/DER_Application__c/fields/Inter_Trip_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Inter_Trip_Scheme__c</fullName>
    <description>Description of the form of inter-trip (e.g. “from local substation”).</description>
    <label>Inter-Trip Scheme</label>
    <length>255</length>
    <type>Text</type>
</CustomField>