force-app/main/default/objects/DER_Application__c/fields/Islandable_Installation__c.field-meta.xml
<CustomField>
    <fullName>Islandable_Installation__c</fullName>
    <description>For identification of small generating units designed with the ability to operate in an islanded mode.</description>
    <label>Islandable Installation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>