force-app/main/default/objects/DER_Application__c/fields/Meter_Install_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Meter_Install_Type_Code__c</fullName>
    <label>Meter Install Type Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>