force-app/main/default/objects/DER_Application__c/fields/Meter_Ref__c.field-meta.xml
<CustomField>
    <fullName>Meter_Ref__c</fullName>
    <label>Meter Ref</label>
    <length>255</length>
    <referenceTo>MeterDataSets__x</referenceTo>
    <relationshipLabel>DER Applications</relationshipLabel>
    <relationshipName>DER_Applications</relationshipName>
    <type>ExternalLookup</type>
</CustomField>