force-app/main/default/objects/DER_Application__c/fields/Neutral_Voltage_Displacement__c.field-meta.xml
<CustomField>
    <fullName>Neutral_Voltage_Displacement__c</fullName>
    <description>Trip voltage (V)</description>
    <label>Neutral Voltage Displacement</label>
    <precision>10</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>