force-app/main/default/objects/DER_Application__c/fields/NMI__c.field-meta.xml
<CustomField>
    <fullName>NMI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NMI</label>
    <referenceTo>Connection_Point__c</referenceTo>
    <relationshipLabel>DER Applications</relationshipLabel>
    <relationshipName>DER_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>