force-app/main/default/objects/DER_Application__c/fields/Nominal_Voltage_at_Connection_Network__c.field-meta.xml
<CustomField>
    <fullName>Nominal_Voltage_at_Connection_Network__c</fullName>
    <label>Nominal Voltage at Connection Network(V)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>