force-app/main/default/objects/DER_Application__c/fields/Over_Freq_Protection__c.field-meta.xml
<CustomField>
    <fullName>Over_Freq_Protection__c</fullName>
    <description>Over frequency protection in Hz
Permitted range is between 50 and 55 (inclusive)</description>
    <label>Over-Frequency Protection (F&gt;)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>