force-app/main/default/objects/DER_Application__c/fields/Overvolt_Protection_2__c.field-meta.xml
<CustomField>
    <fullName>Overvolt_Protection_2__c</fullName>
    <description>Protective function limit</description>
    <label>Overvoltage Protection 2 (V&gt;)</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>