force-app/main/default/objects/DER_Application__c/fields/Ph_A_Exist_Export__c.field-meta.xml
<CustomField>
    <fullName>Ph_A_Exist_Export__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Phase A Existing Export (kVA)</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>