force-app/main/default/objects/DER_Application__c/fields/Ph_A_New_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Ph_A_New_Capacity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Phase A New System Capacity (kVA)</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>