force-app/main/default/objects/DER_Application__c/fields/Ph_B_Total_Export__c.field-meta.xml
<CustomField>
    <fullName>Ph_B_Total_Export__c</fullName>
    <formula>IF(OR(Case_Type__c=&apos;New&apos;, Case_Type__c=&apos;Augmentation&apos;), Ph_B_Exist_Export__c, 0) + Ph_B_New_Export__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase B Total Export (kVA)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>