force-app/main/default/objects/DER_Application__c/fields/Ph_C_New_Export__c.field-meta.xml
<CustomField>
    <fullName>Ph_C_New_Export__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Phase C New System Export (kVA)</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>