force-app/main/default/objects/DER_Application__c/fields/Ph_C_Total_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Ph_C_Total_Capacity__c</fullName>
    <formula>IF(OR(Case_Type__c=&apos;New&apos;, Case_Type__c=&apos;Augmentation&apos;), Ph_C_Exist_Capacity__c, 0) + Ph_C_New_Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phase C Total Capacity (kVA)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>