force-app/main/default/objects/DER_Application__c/fields/Phase_Amount_Installed__c.field-meta.xml
<CustomField>
    <fullName>Phase_Amount_Installed__c</fullName>
    <description>The number of phases with DER installed</description>
    <formula>IF(
    INCLUDES(Phases__c, &quot;3 Phase&quot;), 3, 
    (
    IF(INCLUDES(Phases__c, &quot;A&quot;), 1, 0) +
    IF(INCLUDES(Phases__c, &quot;B&quot;), 1, 0) +
    IF(INCLUDES(Phases__c, &quot;C&quot;), 1, 0)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount of Phases with DER installed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>