force-app/main/default/objects/DER_Application__c/fields/Post_Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Installation_Date__c</fullName>
    <label>Post Installation Date</label>
    <type>DateTime</type>
</CustomField>