force-app/main/default/objects/DER_Application__c/fields/Protect_Relay_Make_Series__c.field-meta.xml
<CustomField>
    <fullName>Protect_Relay_Make_Series__c</fullName>
    <label>Protection Relay Make/Series</label>
    <length>80</length>
    <type>Text</type>
</CustomField>