force-app/main/default/objects/DER_Application__c/fields/Protect_Relay_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Protect_Relay_Manufacturer__c</fullName>
    <label>Protection Relay Manufacturer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>