force-app/main/default/objects/DER_Application__c/fields/Rate_of_Change_of_Freq__c.field-meta.xml
<CustomField>
    <fullName>Rate_of_Change_of_Freq__c</fullName>
    <description>Rate of change of frequency trip point (Hz/s).
Permitted range is between 0 and 4 (inclusive)</description>
    <label>Rate of Change of Frequency (RoCoF)</label>
    <precision>7</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>