force-app/main/default/objects/DER_Application__c/fields/Registered_Generator__c.field-meta.xml
<CustomField>
    <fullName>Registered_Generator__c</fullName>
    <defaultValue>&quot;No&quot;</defaultValue>
    <description>If &apos;Yes&apos; is selected, the application is NOT to be published to AEMO DER Register</description>
    <label>Registered Generator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>