force-app/main/default/objects/DER_Application__c/fields/Signal_Loss_Max_Detect__c.field-meta.xml
<CustomField>
    <fullName>Signal_Loss_Max_Detect__c</fullName>
    <description>Fail-safe signal loss detection max time &lt; 30 seconds</description>
    <label>Signal Loss Max Detect Time &lt;30 sec</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>