force-app/main/default/objects/DER_Application__c/fields/Site_Load_without_Generation__c.field-meta.xml
<CustomField>
    <fullName>Site_Load_without_Generation__c</fullName>
    <label>Site Load without Generation (kVA)</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>