force-app/main/default/objects/DER_Application__c/fields/SOP_33_06_Compliant__c.field-meta.xml
<CustomField>
    <fullName>SOP_33_06_Compliant__c</fullName>
    <description>If Yes is selected, the applicant/installer has confirmed this installation is compliant with SOP 33-06 Procedures</description>
    <label>SOP 33-06 Compliant?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>