force-app/main/default/objects/DER_Application__c/fields/Synced_To_SNET__c.field-meta.xml
<CustomField>
    <fullName>Synced_To_SNET__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced To SNET?</label>
    <type>Checkbox</type>
</CustomField>