force-app/main/default/objects/DER_Application__c/fields/Total_Exist_Export__c.field-meta.xml
<CustomField>
    <fullName>Total_Exist_Export__c</fullName>
    <formula>Ph_A_Exist_Export__c + Ph_B_Exist_Export__c + Ph_C_Exist_Export__c +  Ph_Unk_Exist_Export__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Existing Export (kVA)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>