force-app/main/default/objects/DER_Application__c/fields/Total_New_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_New_Capacity__c</fullName>
    <formula>Ph_A_New_Capacity__c + Ph_B_New_Capacity__c + Ph_C_New_Capacity__c + Ph_Unk_New_Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total New Capacity (kVA)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>