force-app/main/default/objects/DER_Application__c/fields/Total_Sys_Exp__c.field-meta.xml
<CustomField>
    <fullName>Total_Sys_Exp__c</fullName>
    <label>Total System Export (kVA)</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>