force-app/main/default/objects/DER_Application__c/fields/Total_System_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_System_Capacity__c</fullName>
    <description>Shows the Total System Capacity for all AC Connections across the whole DER Application</description>
    <formula>Total_Sys_Cap__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total System Capacity (kVA)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>